// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelInfo Renders Model information 1`] = `
<Fragment>
  <div
    className="field"
  >
    <dt
      className="term"
    >
      Type
    </dt>
    <dd
      className="value"
    >
      neural network
    </dd>
  </div>
  <div
    className="field"
  >
    <dt
      className="term"
    >
      Hyperparameters
    </dt>
    <dd
      className="value flexColumn"
    >
      <span
        key="0"
      >
        early_stop: true
      </span>
      <span
        key="1"
      >
        layers: 10,3,1
      </span>
      <span
        key="2"
      >
        learning_rate: 0.5
      </span>
    </dd>
  </div>
  <div
    className="field"
  >
    <dt
      className="term"
    >
      Training data
    </dt>
    <dd
      className="value"
    >
      gs://my-bucket/mnist
    </dd>
  </div>
  <div
    className="field"
  >
    <dt
      className="term"
    >
      Training framework
    </dt>
    <dd
      className="value"
    >
      tensorflow
                   v1.0
    </dd>
  </div>
</Fragment>
`;

exports[`ModelInfo Renders Model information with malformed __ALL_META__ property 1`] = `
<Fragment>
  <div
    className="field"
  >
    <dt
      className="term"
    >
      Type
    </dt>
    <dd
      className="value"
    />
  </div>
  <div
    className="field"
  >
    <dt
      className="term"
    >
      Hyperparameters
    </dt>
    <dd
      className="value flexColumn"
    />
  </div>
  <div
    className="field"
  >
    <dt
      className="term"
    >
      Training data
    </dt>
    <dd
      className="value"
    >
      gs://my-bucket/mnist
    </dd>
  </div>
  <div
    className="field"
  >
    <dt
      className="term"
    >
      Training framework
    </dt>
    <dd
      className="value"
    />
  </div>
</Fragment>
`;

exports[`ModelInfo Renders Model information with missing __ALL_META__ property 1`] = `
<Fragment>
  <div
    className="field"
  >
    <dt
      className="term"
    >
      Type
    </dt>
    <dd
      className="value"
    />
  </div>
  <div
    className="field"
  >
    <dt
      className="term"
    >
      Hyperparameters
    </dt>
    <dd
      className="value flexColumn"
    />
  </div>
  <div
    className="field"
  >
    <dt
      className="term"
    >
      Training data
    </dt>
    <dd
      className="value"
    >
      gs://my-bucket/mnist
    </dd>
  </div>
  <div
    className="field"
  >
    <dt
      className="term"
    >
      Training framework
    </dt>
    <dd
      className="value"
    />
  </div>
</Fragment>
`;
